Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17402

slave_transaction_retry_errors="12701" won't be enabled

    XMLWordPrintable

Details

    Description

      I installed SPIDER engine, and try to use below setting :

      slave_transaction_retry_errors="1158,1159,1160,1161,12701,2013"

      But only "12701" is not enabled.

      [How to reproduce]

      1) set up SPIDER engine

      MariaDB [(none)]> source /usr/share/mysql/install_spider.sql
      

      2) confirm that engine is installed

       
      MariaDB [(none)]> show plugins;
      +-------------------------------+----------+--------------------+--------------+---------+
      | Name                          | Status   | Type               | Library      | License |
      +-------------------------------+----------+--------------------+--------------+---------+
      | binlog                        | ACTIVE   | STORAGE ENGINE     | NULL         | GPL     |
      ... cut ...
      | SPIDER                        | ACTIVE   | STORAGE ENGINE     | ha_spider.so | GPL     |
      | SPIDER_ALLOC_MEM              | ACTIVE   | INFORMATION SCHEMA | ha_spider.so | GPL     |
      +-------------------------------+----------+--------------------+--------------+---------+
      55 rows in set (0.003 sec)
      

      3) add below setting to my.cnf and restart mysqld

      [vagrant@server1 ~]$ sudo vi /etc/my.cnf
       
      slave_transaction_retry_errors="1158,1159,1160,1161,12701,2013"
       
      [vagrant@server1 ~]$ sudo systemctl restart mysql.service
      

      4) check current slave_transaction_retry_errors variable

      MariaDB [(none)]> show global variables like "slave_transaction%";
      +----------------------------------+------------------------------------+
      | Variable_name                    | Value                              |
      +----------------------------------+------------------------------------+
      | slave_transaction_retries        | 10                                 |
      | slave_transaction_retry_errors   | 1213,1205,1158,1159,1160,1161,2013 |
      | slave_transaction_retry_interval | 0                                  |
      +----------------------------------+------------------------------------+
      3 rows in set (0.002 sec)
      

      Attachments

        Activity

          People

            Kentoku Kentoku Shiba (Inactive)
            y-taka y-taka
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5d
                0.5d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.