MDEV-17402 slave_transaction_retry_errors="12701" won't be enabled (#1346)

error code 12701 is already included in default value, but other plugin specific error codes are ignored because of checking with ER_ERROR_LAST. ER_ERROR_LAST does not include plugin specific error codes. So I just removed it for fixing this issue.